<resources>
    <string name="app_name">elaundry-apps</string>
    <string name="imageContent">ElaundryApps</string>
    <!-- SplashScreen -->
    <string name="splash1">ElaundryApps</string>
    <string name="splash2">Elaundry v.1.0</string>
    <string name="splash3">Kami jemput dan Antarkan</string>
    <string name="splash4">Cucian Anda</string>
    <!-- Login -->
    <string name="login1">Email</string>
    <string name="login2">******</string>
    <string name="login3">LOGIN</string>
    <string name="login4">Create Account</string>
    <string name="login5">Forget Password ?</string>

    <!-- Register -->
    <string name="daftar1">Nama Lengkap</string>
    <string name="daftar2">Nomor Telepon</string>
    <string name="daftar3">Email</string>
    <string name="daftar4">Password</string>
    <string name="daftar5">DAFTAR</string>
    <string name="daftar6">Login ?</string>


    <!-- Recovery Password -->
    <string name="recovery1">Email</string>
    <string name="recovery2">Kirim Password</string>
    <string name="recovery3">Back ?</string>

    <!-- Menu User-->
    <string name="menuUser1">Home</string>
    <string name="menuUser2">Laundry</string>
    <string name="menuUser3">Akun</string>

    <!-- Single list laundry -->
    <string name="listLaundry1">Nama Laundry</string>
    <string name="listLaundry2">Alamat</string>
    <string name="listLaundry3">Transaksi : 24 kali</string>

    <!-- Home -->
    <string name="user1">Selamat Datang</string>
    <string name="user2">Elaundry</string>
    <string name="user3">Search</string>
    <string name="user4">Laundry</string>

    <!-- Detail Laundry -->
    <string name="detail1">Rp. %1$s /kg</string>
    <string name="detail2">Detail :</string>
    <string name="detail3">Berat</string>
    <string name="detail4">Rp.10.000</string>
    <string name="detail5">28&#8211;2&#8211;2023</string>
    <string name="detail6">1 kg</string>
    <string name="detail7">Total</string>
    <string name="detail8">Tanggal Selesai</string>
    <string name="detail9">Jemput</string>
    <string name="detail10">Status</string>
    <string name="detail11">Pending</string>
    <string name="detail12">CEK LOKASI</string>
    <string name="detail13">#ORDERID : %1$s</string>
    <string name="detail14">%1$s kg</string>
    <string name="detail15">Rp. %1$s</string>


    <!-- Store -->

    <!-- Dashboard -->
    <string name="store1">Selamat Datang</string>
    <string name="store2">Order Baru:</string>
    <string name="store3">Order: #1</string>
    <string name="store4">Rp.10.000</string>
    <string name="store5">28-02-2023</string>

    <string name="rupiah">Rp. %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_user">MapsActivityUser</string>
</resources>