<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_card">
    <ImageView
        android:id="@+id/img_gambar"
        android:layout_width="50sp"
        android:layout_height="70sp"
        android:layout_margin="20sp"
        android:contentDescription="@string/imageContent"
        android:src="@drawable/baju"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:background="#0000"
        android:text="@string/store3"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_gambar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/store4"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_gambar"
        app:layout_constraintTop_toBottomOf="@+id/txt_id"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:text="@string/store5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>